tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_41.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := (((- (1223 - 200)) # ((x + 1223) DIV (+ x))) OR (((z - 200) * (z + 1223)) > ((1 - 0) + (200 MOD 2))));
  (* error *)  r := ((((- p) + (- y)) = ((200 + z) - (y MOD z))) & (((x MOD 200) <= (y DIV 200)) OR ((1223 > x) OR (0 > 2))));
               p := ((+ (+ (1 - z))) # ((+ (+ 200)) + ((x + 1) DIV (0 * z))));
               r := ((((+ 1) - (200 - z)) - ((1 * 2) + (z MOD 200))) = ((- (y + 200)) MOD ((z + 2) * (2 + x))));
               y := ((((2 + 2) MOD (- 1)) + ((+ 2) * (1223 + x))) DIV (+ ((y DIV y) MOD (200 - 2))));
               x := ((((+ y) MOD (+ 1)) DIV ((x - 200) - (y - 1223))) DIV (((2 DIV 1) - (x MOD 0)) * (- (+ 2))));
               z := ((((y DIV z) MOD (z DIV y)) * ((z * z) MOD (1223 * 1))) + (((+ y) DIV (0 * 1)) MOD ((y DIV 2) DIV (- z))));
               r := ((+ ((+ 2) - (- 2))) <= (((1 - 0) * (1 - 0)) DIV ((1223 - z) DIV (1 * y))));
               z := ((((0 * x) MOD (0 * 200)) MOD ((2 MOD 1223) + (1223 DIV 1))) DIV (((200 - z) MOD (1 - 1223)) - (+ (1223 DIV 1223))));
               x := ((+ ((0 + 1223) - (z DIV 1223))) + (- ((z + z) - (1 MOD x))))
END Test12.